# el-colorista

./: .gitignore  README.md  el-colorista.ipynb  main.py  pyproject.toml
src/: color_parser.py  display.py  emotions_lib.py  image_parser.py  main.py  models.py
